# aeson-diff

./: TOUCH  aeson-diff.cabal  cabal.project  package.yaml  stack.yaml
lib/Data/Aeson/: Codec.hs  Diff.hs  Patch.hs  Pointer.hs
lib/Data/Aeson/Patch/: Utilities.hs
lib/Data/Aeson/Patch/Generic/: Utilities.hs
lib/Data/Aeson/Pointer/: ArrayOffset.hs
lib/Data/Aeson/Pointer/ArrayOffset/: Utilities.hs
orphans/aeson-diff-openapi3/: aeson-diff-openapi3.cabal
orphans/aeson-diff-openapi3/src/Data/Aeson/Patch/OpenApi/: Orphans.hs
orphans/aeson-diff-swagger2/: aeson-diff-swagger2.cabal
orphans/aeson-diff-swagger2/src/Data/Aeson/Patch/Swagger/: Orphans.hs
src/: Codec.hs  diff.hs  patch.hs
test/: properties.hs
test/data/cases/: case3-error.txt
