name:                aeson-diff-swagger2
version:             1.2.0.0
synopsis:            An orphan instance for `aeson-diff`'s `Patch` type for `swagger2`'s `Schema` type.
description:
  .
  .
homepage:            https://github.com/clintonmead/aeson-diff
license:             BSD3
author:              Thomas Sutton, Janus Troelsen <ysangkok@gmail.com>, Clinton Mead <clintonmead@gmail.com>
maintainer:          Clinton Mead <clintonmead@gmail.com>
copyright:           (c) 2024 Clinton Mead
category:            JSON, Web
build-type:          Simple
cabal-version:       2.0

source-repository      HEAD
  type: git
  location: https://github.com/clintonmead/aeson-diff

library
  default-language:    GHC2021
  hs-source-dirs:      src
  exposed-modules:     Data.Aeson.Patch.Swagger.Orphans
  build-depends:       base
                     , aeson-diff
                     , autodocodec
                     , autodocodec-swagger2
                     , swagger2
  default-extensions:  DerivingVia
